...
    tools:context="com.github.displace.sdp2022.MainMenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="127dp"
        android:layout_height="123dp"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toStartOf="@+id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@color/purple_200"
        tools:src="@color/purple_200"
...
            android:text="TextView"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="2"
            android:onClick="profileButton"
            android:text="PROFILE" />


        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="2"
            android:onClick="settingsButton"
            android:text="SETTINGS" />

        <Button
            android:id="@+id/newsButton"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="2"
            android:onClick="newsButton"
            android:text="NEWS" />

    </LinearLayout>


    <TextView
        android:id="@+id/titleText"
...
    <Button
        android:id="@+id/playButton"
        android:layout_width="256dp"
        android:layout_height="127dp"
        android:layout_weight="2"
        android:onClick="playButton"
        android:text="PLAY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />
...
